# task_and_motion_planning

./: README.md
blender/: Bottle.blend  Bottle.blend1  Bottle.dae  madar_case.blend
downward_ros/: README.md
downward_ros/downward_interfaces/: CMakeLists.txt  package.xml
downward_ros/downward_interfaces/pddl/: madar_problem  madar_world.pddl  travel-to-shelf  travel-to-shelf-and-pick
downward_ros/downward_ros2/: package.xml  setup.cfg  setup.py
downward_ros/downward_ros2/downward_ros2/: downward_client.py  downward_server.py
downward_ros/downward_ros2/launch/: downward_service.launch.py
kautham_interfaces/: README.md
kautham_interfaces/kautham_interfaces/: CMakeLists.txt  package.xml
kautham_interfaces/kautham_interfaces/srv/: CheckCollision.srv  GetPath.srv  ObsPos.srv  RemoveRobot.srv  RobPos.srv  SetRobControlsNoQuery.srv  SetRobotsConfig.srv
kautham_interfaces/kautham_rosnode/: CMakeLists.txt  package.xml
kautham_interfaces/kautham_rosnode/launch/: kautham_rosnode.launch.py
kautham_interfaces/kautham_rosnode/scripts/: kautham_client_python_node.py  kautham_python_interface.py
kautham_interfaces/kautham_rosnode/src/: kautham_node.cpp
ktmpb/ktmpb_client/: README.md  package.xml  setup.cfg  setup.py
ktmpb/ktmpb_client/ktmpb_client/: APPROACHSECTIONS2ARMS.py  APPROACH_SECTION.py  DUMMY.py  MOVE.py  PICK.py  PLACE.py  PREPAREDRINK.py  PREPARE_DRINK.py  RETRACTARM.py  TIAGO.py  kautham_client_python_node_OLD.py  kautham_python_interface.py  ktmpb_python_interface.py
ktmpb/ktmpb_client/launch/: madar_move.launch.py  table_rooms_a.launch.py  tiago_kitchen_no_pose_right.launch.py
ktmpb/ktmpb_interfaces/: CMakeLists.txt  package.xml
ktmpb/ktmpb_interfaces/demos/OMPL_geo_demos/Table_Rooms_R2/: OMPL_RRTconnect_table_rooms_R2_a.xml  tampconfig_a.xml  tampconfig_a2.xml  tampconfig_ab.xml  tampconfig_b.xml  tampconfig_ba.xml  taskfile_tampconfig_a.xml  taskfile_tampconfig_ab.xml
ktmpb/ktmpb_interfaces/demos/OMPL_geo_demos/Table_Rooms_R2/controls/: madar_R2.cntr
ktmpb/ktmpb_interfaces/demos/OMPL_geo_demos/Table_Rooms_R2/ff-domains/: manipulation_problem_AB  manipulationdomain.pddl
ktmpb/ktmpb_interfaces/demos/OMPL_geo_demos/Tiago-kitchen/: tampconfig_no_pose_right.xml  tampconfig_pose.xml  tampconfig_pose_no_graspit_right.xml  taskfile_tampconfig_no_pose_right.xml  taskfile_tampconfig_pose_no_graspit_right.xml  tiago_counter_B_lateralgrasp_right.xml  tiago_customerloc_lateralgrasp_right.xml  tiago_mobile_counterA_counterB_right.xml
ktmpb/ktmpb_interfaces/demos/OMPL_geo_demos/Tiago-kitchen/controls/: tiago_simple_only_arm_gripper_customerloc.cntr
ktmpb/ktmpb_interfaces/demos/OMPL_geo_demos/Tiago-kitchen/ff-domains/: manipulation_problem_redcan.ff  manipulation_problem_redcan_DeanPaula  manipulation_problem_redcan_DeanPaula.ff  manipulationdomainDeanPaula.pddl
ktmpb/ktmpb_interfaces/demos/OMPL_geo_demos/Yumi_Table_Top/: OMPL_RRTConnect_yumi_table_top.xml  kthconfig.xml  tampconfig.xml
ktmpb/ktmpb_interfaces/demos/OMPL_geo_demos/Yumi_Table_Top/controls/: yumi_by_parts.cntr
ktmpb/ktmpb_interfaces/demos/OMPL_geo_demos/Yumi_Table_Top/ff-domains/: manipulation_problem_cube  manipulationdomain.pddl
ktmpb/ktmpb_interfaces/demos/OMPL_geo_demos/chess/: OMPL_RRTconnect_chess_ur3_gripper_1_simple.xml  OMPL_RRTconnect_chess_ur3_gripper_2.xml  OMPL_RRTconnect_chess_ur3_gripper_2_simple.xml  tampconfig_chess_1_simple.xml  tampconfig_chess_1_simple_dummy.xml  tampconfig_chess_2_simple.xml
ktmpb/ktmpb_interfaces/demos/OMPL_geo_demos/chess/ff-domains/: chessmanipulationdomain_dummy.pddl  manipulation_problem_chess  manipulation_problem_chess_dummy
ktmpb/ktmpb_interfaces/demos/OMPL_geo_demos/madar_bar/: OMPL_LazyRRT_madar_case_move_a_b.xml  OMPL_LazyRRT_madar_case_move_a_b_range1.xml  OMPL_LazyRRT_madar_case_move_a_b_range10.xml  OMPL_LazyRRT_madar_case_move_a_b_range15.xml  OMPL_LazyRRT_madar_case_move_a_b_range5.xml  OMPL_LazyRRT_madar_case_pregrasp_a_b.xml  OMPL_LazyRRT_madar_case_pregrasp_left_a_b_range1.xml  OMPL_LazyRRT_madar_case_pregrasp_left_a_b_range10.xml  OMPL_LazyRRT_madar_case_pregrasp_left_a_b_range15.xml  OMPL_LazyRRT_madar_case_pregrasp_left_a_b_range5.xml  OMPL_PRM_madar_case_move_a_b_g.xml  OMPL_PRM_madar_case_move_a_b_g_dthr20.xml  OMPL_PRM_madar_case_move_a_b_g_dthr30.xml  OMPL_PRM_madar_case_move_a_b_g_dthr40.xml  OMPL_PRM_madar_case_move_a_b_g_dthr50.xml  OMPL_PRM_madar_case_move_a_b_h.xml  OMPL_PRM_madar_case_move_a_b_h_dthr15.xml  OMPL_PRM_madar_case_move_a_b_h_dthr20.xml  OMPL_PRM_madar_case_move_a_b_h_dthr25.xml  OMPL_PRM_madar_case_move_a_b_h_dthr30.xml  OMPL_PRM_madar_case_move_a_b_r.xml  OMPL_PRM_madar_case_move_a_b_r_dthr20.xml  OMPL_PRM_madar_case_move_a_b_r_dthr30.xml  OMPL_PRM_madar_case_move_a_b_r_dthr40.xml  OMPL_PRM_madar_case_move_a_b_r_dthr50.xml  OMPL_PRM_madar_case_move_a_b_sdk.xml  OMPL_PRM_madar_case_move_a_b_sdk_dthr20.xml  OMPL_PRM_madar_case_move_a_b_sdk_dthr30.xml  OMPL_PRM_madar_case_move_a_b_sdk_dthr40.xml  OMPL_RRTconnect_madar_case_complete control.xml  OMPL_RRTconnect_madar_case_move_a_b.xml  OMPL_RRTconnect_madar_case_move_a_b_range0_5.xml  OMPL_RRTconnect_madar_case_move_a_b_range1.xml  OMPL_RRTconnect_madar_case_move_a_b_range1_5.xml  OMPL_RRTconnect_madar_case_move_a_b_range2.xml  OMPL_RRTconnect_madar_case_pregrasp_a_b.xml  OMPL_RRTconnect_madar_case_pregrasp_left_a_b.xml  OMPL_RRTconnect_madar_case_pregrasp_left_a_b_range0_5.xml  OMPL_RRTconnect_madar_case_pregrasp_left_a_b_range1.xml  OMPL_RRTconnect_madar_case_pregrasp_left_a_b_range1_5.xml  (+26 more)
ktmpb/ktmpb_interfaces/demos/OMPL_geo_demos/madar_bar/controls/: madar.cntr  madar_R2.cntr  madar_both_arms.cntr  madar_left_arm.cntr  madar_left_hand.cntr  madar_right_arm.cntr
ktmpb/ktmpb_interfaces/demos/OMPL_geo_demos/madar_bar/ff-domains/: madar_problem  madar_world copy.pddl  madar_world.pddl  travel-to-shelf  travel-to-shelf copy
ktmpb/ktmpb_interfaces/demos/models/obstacles/kitchen/: round_table.dae  round_table.urdf
ktmpb/ktmpb_interfaces/demos/models/obstacles/madar_bar/: Bottle.dae  bottle_L.urdf  (+10 more)
ktmpb/ktmpb_interfaces/srv/: TiagoIk.srv
(+30 files in other folders)
