<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ktmpb_client</name>
  <version>1.0.0</version>
  <description>ktmpb: interface between Downward task planner and Kautham motion planner</description>
  <maintainer email="jan.rosell@upc.edu">janrosell</maintainer>
  <license>GPLv2</license>
 
  <depend>rclpy</depend>
  <depend>ros2launch</depend>

  <depend>kautham_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>downward_ros2</depend>
  <depend>downward_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!--test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend-->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

